Adding EI 6.2.0 Dockerfile